# StreamDeck-AudioMute

./: .gitignore  AudioDeviceLib.cmake  CMakeLists.txt  LICENSE.AUDIO-FILES  LICENSE.GLYPHICONS  README.md  StreamDeckSDK.cmake  TROUBLESHOOTING.md
.github/workflows/: build.yml  ci.yml  package.yml  release.yml  sdplugin.yml
Sources/: .clang-format  Action.cpp  Action.h  ActionWithExternalState.h  AudioDevices.h  AudioDevicesMacOS.cpp  AudioDevicesWindows.cpp  AudioFunctions.cpp  AudioFunctions.h  AudioFunctionsMacOS.cpp  AudioFunctionsWindows.cpp  AudioMuteStreamDeckPlugin.cpp  AudioMuteStreamDeckPlugin.h  BaseMuteAction.cpp  BaseMuteAction.h  CMakeLists.txt  CallbackTimer.cpp  CallbackTimer.h  DefaultAudioDevices.cpp  DefaultAudioDevices.h  ESDAction.cpp  ESDAction.h  ESDActionWithExternalState.h  ESDPlugin.cpp  ESDPlugin.h  MuteAction.cpp  MuteAction.h  MyStreamDeckPlugin.cpp  MyStreamDeckPlugin.h  PlayWavFile.cpp  PlayWavFile.h  PlayWavFileMacOS.cpp  PlayWavFileWindows.cpp  PolicyConfig.h  StringEncoding.cpp  StringEncoding.h  ToggleMuteAction.cpp  ToggleMuteAction.h  UnmuteAction.cpp  UnmuteAction.h  (+5 more)
Sources/Windows/: AudioFunctions.cpp  MicMuteToggle.cpp  RCa20100  com.elgato.cpu.sdPlugin.vcxproj  com.fredemmott.micmutetoggle.sdplugin.rc  resource.h
Sources/sdPlugin/: manifest.json
Sources/sdPlugin/propertyinspector/: index.html
sdPlugin/: CMakeLists.txt  manifest.in.json  manifest.json.in
sdPlugin/propertyinspector/: index.html
